@@ -86,7 +86,7 @@ export(subgraph, simplify, degree, degree.distribution, diameter,
        get.all.shortest.paths, get.diameter, farthest.nodes,
        graph.laplacian, constraint, page.rank, reciprocity, rewire,
        graph.density, neighborhood.size, neighborhood, graph.neighborhood,
-       graph.coreness)
+       graph.coreness, topological.sort)
 
 # plotting
 
