@@ -5739,6 +5739,27 @@ SEXP R_igraph_walktrap_community(SEXP graph, SEXP pweights,
   return result;
 } 
 
+SEXP R_igraph_topological_sorting(SEXP graph, SEXP pneimode) {
+  igraph_t g;
+  igraph_vector_t res;
+  igraph_integer_t mode=REAL(pneimode)[0];
+  SEXP result;  
+
+  R_igraph_before();
+  
+  R_SEXP_to_igraph(graph, &g);
+  igraph_vector_init(&res, 0);
+  igraph_topological_sorting(&g, &res, mode);
+  
+  PROTECT(result=R_igraph_vector_to_SEXP(&res));
+  igraph_vector_destroy(&res);
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+
 SEXP R_igraph_evolver_d(SEXP graph, SEXP pniter, SEXP psd, SEXP pnorm,
 			SEXP pcites, SEXP pexpected, SEXP pdebug) {
   igraph_t g;
